--- a/ars1/uni.net__ARS/uni.net/UNIVER/PRINCETON/css/style_arseniy.css
+++ b/ars1/uni.net__ARS/uni.net/UNIVER/PRINCETON/css/style_arseniy.css
@@ -843,6 +843,7 @@ section .studentlife .studentlife-text p {
   }
 
   .header__nav {
+    margin-top: 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
