--- a/css/style__vova.css
+++ b/css/style__vova.css
@@ -1925,7 +1925,7 @@ nav .header__nav-ul a:hover {
     height: 60px;
     width: 60px;
     background: #ebcab9;
-    padding: 15px;
+    padding: 10px;
     margin-left: 35px;
     border-radius: 50%;
     border: #000 solid 3px;
@@ -1964,6 +1964,7 @@ nav .header__nav-ul a:hover {
   }
 
   .header__nav {
+    margin-top: 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
