--- a/ars1/uni.net__ARS/uni.net/UNIVER/CAMBRIDGE/css/CAMBRIDGE.css
+++ b/ars1/uni.net__ARS/uni.net/UNIVER/CAMBRIDGE/css/CAMBRIDGE.css
@@ -110,8 +110,7 @@ section {
 * {
   padding: 0;
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -168,21 +167,13 @@ body {
   border: solid #A36361 1px;
 }
 .header__shell {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   height: 95px;
 }
 .header__logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 .header__logo-img {
   width: 116px;
@@ -193,28 +184,15 @@ body {
   font-size: 24px;
 }
 .header__nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .burger-active {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-between;
   margin-right: 30px;
   height: 40px;
   width: 40px;
@@ -231,28 +209,19 @@ body {
   background: #A36361;
 }
 .burger-active #item1 {
-  -webkit-transform: translate(0px, -50%) rotate(45deg);
-          transform: translate(0px, -50%) rotate(45deg);
+  transform: translate(0px, -50%) rotate(45deg);
 }
 .burger-active #item2 {
   display: none;
 }
 .burger-active #item3 {
-  -webkit-transform: translate(0px, -50%) rotate(-45deg);
-          transform: translate(0px, -50%) rotate(-45deg);
+  transform: translate(0px, -50%) rotate(-45deg);
 }
 
 .burger {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-between;
   margin-right: 30px;
   height: 40px;
   width: 40px;
@@ -271,19 +240,13 @@ nav .header__nav-ul {
 }
 nav .header__nav-ul ul {
   list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding: 20px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 nav .header__nav-ul ul li {
   padding: 10px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 nav .header__nav-ul a {
   text-decoration: none;
@@ -301,6 +264,9 @@ nav .header__nav-ul a:hover {
   display: inline-block;
 }
 
+main {
+  width: 100%;
+}
 main .cambridge-image {
   height: 700px;
   background: url(../img/1.jpg);
@@ -328,13 +294,8 @@ section .minimum-points h2 {
   font-weight: 700;
 }
 section .minimum-points .minimum-points-text {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  flex-direction: row;
 }
 section .minimum-points .minimum-points-text ul {
   margin-right: 50px;
@@ -358,13 +319,8 @@ section .magistracy h2 {
   font-weight: 700;
 }
 section .magistracy .magistracy-text p {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  flex-direction: row;
 }
 section .calendar h2 {
   padding-top: 50px;
@@ -382,12 +338,9 @@ section .calendar h2 {
   background-size: cover;
   background-position: right;
   background-repeat: no-repeat;
-  -webkit-box-shadow: 0px -15px 15px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px -15px 15px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px -15px 15px 4px rgba(0, 0, 0, 0.15);
 }
 .footer__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 .footer__text {
@@ -402,16 +355,10 @@ section .calendar h2 {
   color: #000000;
 }
 .footer__social {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: right;
-      -ms-flex-pack: right;
-          justify-content: right;
+  justify-content: right;
 }
 .footer__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   height: 90px;
   width: 90px;
@@ -420,12 +367,8 @@ section .calendar h2 {
   margin-left: 35px;
   border-radius: 50%;
   border: #000 solid 5px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 .footer__item a {
   text-decoration: none;
@@ -443,51 +386,27 @@ section .calendar h2 {
 }
 
 .fa-instagram {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .fa-reddit-alien {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .fa-whatsapp {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .fa-twitter {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (max-width: 1000px) and (min-width: 768px) {
@@ -498,13 +417,9 @@ section .calendar h2 {
 
   nav .header__nav-ul ul {
     list-style: none;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     padding: 0 20px;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
   }
   nav .header__nav-ul ul li {
     padding: 10px;
@@ -525,17 +440,11 @@ section .calendar h2 {
     background-size: cover;
     background-position: right;
     background-repeat: no-repeat;
-    -webkit-box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
-            box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
   }
   .footer__content {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   .footer__text {
     font-family: "Roboto";
@@ -548,13 +457,9 @@ section .calendar h2 {
     color: #000000;
   }
   .footer__social {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
   }
   .footer__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     height: 90px;
     width: 90px;
@@ -564,12 +469,8 @@ section .calendar h2 {
     margin-top: 10px;
     border-radius: 50%;
     border: #000 solid 2px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
   }
   .footer__item a {
     text-decoration: none;
@@ -596,12 +497,9 @@ section .calendar h2 {
     background-size: cover;
     background-position: right;
     background-repeat: no-repeat;
-    -webkit-box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
-            box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
   }
   .footer__content {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
   }
   .footer__text {
@@ -616,19 +514,11 @@ section .calendar h2 {
     color: #000000;
   }
   .footer__social {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: space-between;
+    align-items: center;
   }
   .footer__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     height: 90px;
     width: 90px;
@@ -637,12 +527,8 @@ section .calendar h2 {
     margin-left: 35px;
     border-radius: 50%;
     border: #000 solid 5px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
   }
   .footer__item a {
     text-decoration: none;
@@ -666,12 +552,8 @@ section .calendar h2 {
   }
 
   .header__nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
   }
 
   .header__shell {
@@ -681,26 +563,16 @@ section .calendar h2 {
   }
 
   .header__logo {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
   }
 
   nav {
-    -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1;
+    order: 1;
   }
   nav .header__nav-ul ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
     list-style: none;
     padding: 0 20px;
   }
@@ -723,16 +595,11 @@ section .calendar h2 {
     background-size: cover;
     background-position: right;
     background-repeat: no-repeat;
-    -webkit-box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
-            box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
   }
   .footer__content {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
   }
   .footer__text {
     width: 50%;
@@ -746,17 +613,10 @@ section .calendar h2 {
     color: #000000;
   }
   .footer__social {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   .footer__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     height: 80px;
     width: 80px;
@@ -766,12 +626,8 @@ section .calendar h2 {
     margin-left: 35px;
     border-radius: 50%;
     border: #000 solid 2px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
   }
   .footer__item a {
     text-decoration: none;
@@ -797,35 +653,21 @@ section .calendar h2 {
   }
 
   .header__logo {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
   }
 
   .header__nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
   }
 
   nav {
-    -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1;
+    order: 1;
   }
   nav .header__nav-ul ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
     list-style: none;
     padding: 0 20px;
   }
@@ -848,8 +690,7 @@ section .calendar h2 {
     background-size: cover;
     background-position: right;
     background-repeat: no-repeat;
-    -webkit-box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
-            box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
   }
   .footer__text {
     font-family: "Roboto";
@@ -862,20 +703,11 @@ section .calendar h2 {
     color: #000000;
   }
   .footer__social {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    flex-direction: column;
+    justify-content: space-between;
   }
   .footer__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     height: 90px;
     width: 90px;
@@ -885,12 +717,8 @@ section .calendar h2 {
     margin-top: 10px;
     border-radius: 50%;
     border: #000 solid 2px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
   }
   .footer__item a {
     text-decoration: none;
@@ -916,31 +744,19 @@ section .calendar h2 {
   }
 
   .header__nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: space-between;
+    align-items: center;
   }
 
   nav {
-    -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1;
+    order: 1;
   }
   nav .header__nav-ul ul {
     list-style: none;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     padding: 0 5px;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
   }
   nav .header__nav-ul ul li {
     padding: 0 5px;
@@ -961,16 +777,11 @@ section .calendar h2 {
     background-size: cover;
     background-position: right;
     background-repeat: no-repeat;
-    -webkit-box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
-            box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
   }
   .footer__content {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
   }
   .footer__text {
     font-family: "Roboto";
@@ -980,20 +791,11 @@ section .calendar h2 {
     color: #000000;
   }
   .footer__social {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    flex-direction: column;
+    justify-content: space-between;
   }
   .footer__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     height: 60px;
     width: 60px;
@@ -1002,12 +804,8 @@ section .calendar h2 {
     margin-left: 35px;
     border-radius: 50%;
     border: #000 solid 3px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
   }
   .footer__item a {
     text-decoration: none;
@@ -1041,31 +839,20 @@ section .calendar h2 {
   }
 
   .header__nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    margin-top: 30px;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: space-between;
+    align-items: center;
   }
 
   nav {
-    -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1;
+    order: 1;
   }
   nav .header__nav-ul ul {
     list-style: none;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     padding: 0 5px;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
   }
   nav .header__nav-ul ul li {
     padding: 0 5px;
@@ -1086,16 +873,11 @@ section .calendar h2 {
     background-size: cover;
     background-position: right;
     background-repeat: no-repeat;
-    -webkit-box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
-            box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
   }
   .footer__content {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
   }
   .footer__text {
     font-family: "Roboto";
@@ -1105,20 +887,11 @@ section .calendar h2 {
     color: #000000;
   }
   .footer__social {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    flex-direction: column;
+    justify-content: space-between;
   }
   .footer__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     height: 60px;
     width: 60px;
@@ -1127,12 +900,8 @@ section .calendar h2 {
     margin-left: 35px;
     border-radius: 50%;
     border: #000 solid 2px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
   }
   .footer__item a {
     text-decoration: none;
