--- a/ars1/uni.net__ARS/uni.net/UNIVER/CAMBRIDGE/css/CAMBRIDGE.scss
+++ b/ars1/uni.net__ARS/uni.net/UNIVER/CAMBRIDGE/css/CAMBRIDGE.scss
@@ -129,6 +129,7 @@ nav {
 }
 
 main {
+    width: 100%;
     .cambridge-image {
         height: 700px;
         background: url(../img/1.jpg);
@@ -718,6 +719,7 @@ section {
         padding-bottom: 30px;
     }
     .header__nav {
+        margin-top: 30px;
         display: flex;
         justify-content: space-between;
         align-items: center;
