--- a/ars1/uni.net__ARS/uni.net/UNIVER/CHICAGO/css/style_arseniy.css
+++ b/ars1/uni.net__ARS/uni.net/UNIVER/CHICAGO/css/style_arseniy.css
@@ -110,8 +110,7 @@ section {
 * {
   padding: 0;
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -168,21 +167,13 @@ body {
   border: solid #A36361 1px;
 }
 .header__shell {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   height: 95px;
 }
 .header__logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 .header__logo-img {
   width: 116px;
@@ -193,28 +184,15 @@ body {
   font-size: 24px;
 }
 .header__nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .burger-active {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-between;
   margin-right: 30px;
   height: 40px;
   width: 40px;
@@ -231,28 +209,19 @@ body {
   background: #A36361;
 }
 .burger-active #item1 {
-  -webkit-transform: translate(0px, -50%) rotate(45deg);
-          transform: translate(0px, -50%) rotate(45deg);
+  transform: translate(0px, -50%) rotate(45deg);
 }
 .burger-active #item2 {
   display: none;
 }
 .burger-active #item3 {
-  -webkit-transform: translate(0px, -50%) rotate(-45deg);
-          transform: translate(0px, -50%) rotate(-45deg);
+  transform: translate(0px, -50%) rotate(-45deg);
 }
 
 .burger {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-between;
   margin-right: 30px;
   height: 40px;
   width: 40px;
@@ -271,19 +240,13 @@ nav .header__nav-ul {
 }
 nav .header__nav-ul ul {
   list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding: 20px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 nav .header__nav-ul ul li {
   padding: 10px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 nav .header__nav-ul a {
   text-decoration: none;
@@ -349,12 +312,9 @@ section .famous-graduates h2 {
   background-size: cover;
   background-position: right;
   background-repeat: no-repeat;
-  -webkit-box-shadow: 0px -15px 15px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px -15px 15px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px -15px 15px 4px rgba(0, 0, 0, 0.15);
 }
 .footer__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 .footer__text {
@@ -369,16 +329,10 @@ section .famous-graduates h2 {
   color: #000000;
 }
 .footer__social {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: right;
-      -ms-flex-pack: right;
-          justify-content: right;
+  justify-content: right;
 }
 .footer__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   height: 90px;
   width: 90px;
@@ -387,12 +341,8 @@ section .famous-graduates h2 {
   margin-left: 35px;
   border-radius: 50%;
   border: #000 solid 5px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 .footer__item a {
   text-decoration: none;
@@ -410,51 +360,27 @@ section .famous-graduates h2 {
 }
 
 .fa-instagram {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .fa-reddit-alien {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .fa-whatsapp {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .fa-twitter {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 @media (max-width: 1000px) and (min-width: 768px) {
@@ -465,13 +391,9 @@ section .famous-graduates h2 {
 
   nav .header__nav-ul ul {
     list-style: none;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     padding: 0 20px;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
   }
   nav .header__nav-ul ul li {
     padding: 10px;
@@ -492,17 +414,11 @@ section .famous-graduates h2 {
     background-size: cover;
     background-position: right;
     background-repeat: no-repeat;
-    -webkit-box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
-            box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
   }
   .footer__content {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   .footer__text {
     font-family: "Roboto";
@@ -515,13 +431,9 @@ section .famous-graduates h2 {
     color: #000000;
   }
   .footer__social {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
   }
   .footer__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     height: 90px;
     width: 90px;
@@ -531,12 +443,8 @@ section .famous-graduates h2 {
     margin-top: 10px;
     border-radius: 50%;
     border: #000 solid 2px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
   }
   .footer__item a {
     text-decoration: none;
@@ -563,12 +471,9 @@ section .famous-graduates h2 {
     background-size: cover;
     background-position: right;
     background-repeat: no-repeat;
-    -webkit-box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
-            box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
   }
   .footer__content {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
   }
   .footer__text {
@@ -583,19 +488,11 @@ section .famous-graduates h2 {
     color: #000000;
   }
   .footer__social {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: space-between;
+    align-items: center;
   }
   .footer__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     height: 90px;
     width: 90px;
@@ -604,12 +501,8 @@ section .famous-graduates h2 {
     margin-left: 35px;
     border-radius: 50%;
     border: #000 solid 5px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
   }
   .footer__item a {
     text-decoration: none;
@@ -633,12 +526,8 @@ section .famous-graduates h2 {
   }
 
   .header__nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
   }
 
   .header__shell {
@@ -648,26 +537,16 @@ section .famous-graduates h2 {
   }
 
   .header__logo {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
   }
 
   nav {
-    -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1;
+    order: 1;
   }
   nav .header__nav-ul ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
     list-style: none;
     padding: 0 20px;
   }
@@ -690,16 +569,11 @@ section .famous-graduates h2 {
     background-size: cover;
     background-position: right;
     background-repeat: no-repeat;
-    -webkit-box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
-            box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
   }
   .footer__content {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
   }
   .footer__text {
     width: 50%;
@@ -713,17 +587,10 @@ section .famous-graduates h2 {
     color: #000000;
   }
   .footer__social {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
   }
   .footer__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     height: 80px;
     width: 80px;
@@ -733,12 +600,8 @@ section .famous-graduates h2 {
     margin-left: 35px;
     border-radius: 50%;
     border: #000 solid 2px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
   }
   .footer__item a {
     text-decoration: none;
@@ -764,35 +627,21 @@ section .famous-graduates h2 {
   }
 
   .header__logo {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    justify-content: center;
   }
 
   .header__nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
   }
 
   nav {
-    -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1;
+    order: 1;
   }
   nav .header__nav-ul ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
     list-style: none;
     padding: 0 20px;
   }
@@ -815,8 +664,7 @@ section .famous-graduates h2 {
     background-size: cover;
     background-position: right;
     background-repeat: no-repeat;
-    -webkit-box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
-            box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
   }
   .footer__text {
     font-family: "Roboto";
@@ -829,20 +677,11 @@ section .famous-graduates h2 {
     color: #000000;
   }
   .footer__social {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    flex-direction: column;
+    justify-content: space-between;
   }
   .footer__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     height: 90px;
     width: 90px;
@@ -852,12 +691,8 @@ section .famous-graduates h2 {
     margin-top: 10px;
     border-radius: 50%;
     border: #000 solid 2px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
   }
   .footer__item a {
     text-decoration: none;
@@ -883,31 +718,19 @@ section .famous-graduates h2 {
   }
 
   .header__nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: space-between;
+    align-items: center;
   }
 
   nav {
-    -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1;
+    order: 1;
   }
   nav .header__nav-ul ul {
     list-style: none;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     padding: 0 5px;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
   }
   nav .header__nav-ul ul li {
     padding: 0 5px;
@@ -928,16 +751,11 @@ section .famous-graduates h2 {
     background-size: cover;
     background-position: right;
     background-repeat: no-repeat;
-    -webkit-box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
-            box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
   }
   .footer__content {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
   }
   .footer__text {
     font-family: "Roboto";
@@ -947,20 +765,11 @@ section .famous-graduates h2 {
     color: #000000;
   }
   .footer__social {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    flex-direction: column;
+    justify-content: space-between;
   }
   .footer__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     height: 60px;
     width: 60px;
@@ -969,12 +778,8 @@ section .famous-graduates h2 {
     margin-left: 35px;
     border-radius: 50%;
     border: #000 solid 3px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
   }
   .footer__item a {
     text-decoration: none;
@@ -1008,31 +813,20 @@ section .famous-graduates h2 {
   }
 
   .header__nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
+    margin-top: 30px;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: space-between;
+    align-items: center;
   }
 
   nav {
-    -webkit-box-ordinal-group: 2;
-        -ms-flex-order: 1;
-            order: 1;
+    order: 1;
   }
   nav .header__nav-ul ul {
     list-style: none;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     padding: 0 5px;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
   }
   nav .header__nav-ul ul li {
     padding: 0 5px;
@@ -1053,16 +847,11 @@ section .famous-graduates h2 {
     background-size: cover;
     background-position: right;
     background-repeat: no-repeat;
-    -webkit-box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
-            box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
   }
   .footer__content {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
   }
   .footer__text {
     font-family: "Roboto";
@@ -1072,20 +861,11 @@ section .famous-graduates h2 {
     color: #000000;
   }
   .footer__social {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    flex-direction: column;
+    justify-content: space-between;
   }
   .footer__item {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
     height: 60px;
     width: 60px;
@@ -1094,12 +874,8 @@ section .famous-graduates h2 {
     margin-left: 35px;
     border-radius: 50%;
     border: #000 solid 2px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
   }
   .footer__item a {
     text-decoration: none;
