--- a/ars1/uni.net__ARS/uni.net/UNIVER/MASSACHUSETTS/css/style_arseniy.scss
+++ b/ars1/uni.net__ARS/uni.net/UNIVER/MASSACHUSETTS/css/style_arseniy.scss
@@ -720,6 +720,7 @@ section {
         padding-bottom: 30px;
     }
     .header__nav {
+        margin-top: 30px;
         display: flex;
         justify-content: space-between;
         align-items: center;
