--- a/ars1/uni.net__ARS/uni.net/catalog/css/style_arseniy.scss
+++ b/ars1/uni.net__ARS/uni.net/catalog/css/style_arseniy.scss
@@ -236,6 +236,26 @@ nav {
 }
 
 @media (max-width: 1080px) and(min-width:950px) {
+    nav {
+        .header__nav-ul {
+            ul {
+                list-style: none;
+                display: flex;
+                padding: 0 20px;
+                align-items: center;
+                li {
+                    padding: 10px;
+                }
+            }
+            a {
+                text-decoration: none;
+                color: #3A1E1C;
+                font-family: 'Roboto';
+                font-weight: 400;
+                font-size: 14px;
+            }
+        }
+    }
     .catalog__item {
         .catalog__text {
             font-size: 30px;
@@ -250,6 +270,26 @@ nav {
 }
 
 @media (max-width: 950px) and(min-width:769px) {
+    nav {
+        .header__nav-ul {
+            ul {
+                list-style: none;
+                display: flex;
+                padding: 0 20px;
+                align-items: center;
+                li {
+                    padding: 10px;
+                }
+            }
+            a {
+                text-decoration: none;
+                color: #3A1E1C;
+                font-family: 'Roboto';
+                font-weight: 400;
+                font-size: 14px;
+            }
+        }
+    }
     header {
         .header__main {
             height: 350px;
@@ -274,8 +314,47 @@ nav {
 }
 
 @media (max-width: 768px) and(min-width:320px) {
+    .header__menu {
+        .container {
+            width: 300px;
+            margin: 0 auto;
+        }
+    }
+    .header__shell {
+        display: block;
+        height: 100%;
+        padding-bottom: 30px;
+    }
+    .header__nav {
+        margin-top: 30px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    nav {
+        order: 1;
+        .header__nav-ul {
+            ul {
+                list-style: none;
+                display: flex;
+                padding: 0 5px;
+                align-items: center;
+                li {
+                    padding: 0 5px;
+                }
+            }
+            a {
+                text-decoration: none;
+                color: #3A1E1C;
+                font-family: 'Roboto';
+                font-weight: 800;
+                font-size: 12px;
+            }
+        }
+    }
     header {
         .header__main {
+            text-align: center;
             height: 270px;
             font-weight: 600;
             font-size: 40px;
@@ -320,6 +399,63 @@ nav {
             }
         }
     }
+    .footer {
+        .container {
+            width: 300px;
+            margin: 0 auto;
+        }
+        // height: 400px;
+        height: 100%;
+        background: rgb(235, 202, 185);
+        background-image: url(../img/Vector.png);
+        padding: 60px 0;
+        background-size: cover;
+        background-position: right;
+        background-repeat: no-repeat;
+        box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
+        &__content {
+            display: flex;
+            justify-content: space-between;
+            padding: 0 40px;
+        }
+        .footer__text {
+            font-family: 'Roboto';
+            font-size: 30px;
+            font-weight: 700;
+            line-height: 48px;
+            color: #000000;
+        }
+        &__social {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+        &__item {
+            display: flex;
+            height: 30px;
+            width: 30px;
+            background: #ebcab9;
+            padding: 10px;
+            margin-left: 35px;
+            border-radius: 50%;
+            border: #000 solid 3px;
+            justify-content: center;
+            align-items: center;
+            a {
+                text-decoration: none;
+                color: #000000;
+                opacity: 1;
+                font-size: 40px;
+            }
+        }
+    }
+    .footer__item:hover {
+        a {
+            color: #ebcab9;
+            padding: 10px;
+        }
+        background: #000000;
+    }
 }
 
 @media (max-width: 425px) and(min-width:320px) {
@@ -338,6 +474,62 @@ nav {
     .catalog__list .catalog__item .catalog__text {
         font-size: 20px;
         line-height: 26px;
+    }
+    .footer {
+        // height: 400px;
+        .container {
+            width: 300px;
+            margin: 0 auto;
+        }
+        height: 100%;
+        background: rgb(235, 202, 185);
+        background-image: url(../img/Vector.png);
+        padding: 60px 0;
+        background-size: cover;
+        background-position: right;
+        background-repeat: no-repeat;
+        box-shadow: 0px -20px 20px 4px rgba(0, 0, 0, 0.15);
+        &__content {
+            display: flex;
+            justify-content: space-around;
+        }
+        &__text {
+            font-family: 'Roboto';
+            font-size: 15px;
+            font-weight: 500;
+            line-height: 30px;
+            color: #000000;
+        }
+        &__social {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+        &__item {
+            display: flex;
+            height: 30px;
+            width: 30px;
+            background: #ebcab9;
+            padding: 10px;
+            margin-left: 35px;
+            border-radius: 50%;
+            border: #000 solid 2px;
+            justify-content: center;
+            align-items: center;
+            a {
+                text-decoration: none;
+                color: #000000;
+                opacity: 1;
+                font-size: 10px;
+            }
+        }
+    }
+    .footer__item:hover {
+        a {
+            color: #ebcab9;
+            padding: 10px;
+        }
+        background: #000000;
     }
 }
 
@@ -396,104 +588,103 @@ nav {
     background: #000000;
 }
 
-@media (max-width: 1000px) and(min-width:768px) {
-    .container {
-        width: 700px;
-        margin: 0 auto;
-    }
-    .carousel {
-        display: none;
-    }
-    nav {
-        .header__nav-ul {
-            ul {
-                list-style: none;
-                display: flex;
-                padding: 20px;
-                align-items: center;
-                li {
-                    padding: 10px;
-                }
-            }
-            a {
-                text-decoration: none;
-                color: #3a1e1c;
-                font-family: "Roboto";
-                font-weight: 400;
-                font-size: 14px;
-            }
-        }
-    }
-}
-
-@media (max-width: 768px) and(min-width:600px) {
-    .container {
-        width: 550px;
-        margin: 0 auto;
-    }
-    .carousel {
-        display: none;
-    }
-    .header__nav {
-        display: flex;
-        align-items: center;
-    }
-    .header__shell {
-        display: block;
-        height: 100%;
-    }
-    .header__logo {
-        display: flex;
-        justify-content: center;
-    }
-    .burger-active {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        padding: 30px 40px;
-        margin-right: 30px;
-        .burger-item {
-            width: 40px;
-            height: 5px;
-            border: 1px solid #a36361;
-            border-radius: 20px;
-            margin: 3px 0;
-            background: #a36361;
-        }
-    }
-    .burger {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        padding: 30px;
-        margin-right: 30px;
-        .burger-item {
-            width: 40px;
-            height: 5px;
-            border: 1px solid #a36361;
-            border-radius: 20px;
-            margin: 3px 0;
-            background: #a36361;
-        }
-    }
-    nav {
-        .header__nav-ul {
-            ul {
-                display: flex;
-                align-items: center;
-                list-style: none;
-                padding: 0 20px;
-                li {
-                    padding: 0 10px;
-                }
-            }
-            a {
-                text-decoration: none;
-                color: #3a1e1c;
-                font-family: "Roboto";
-                font-weight: 400;
-                font-size: 14px;
-            }
-        }
-    }
-}
+// @media (max-width: 1000px) and(min-width:768px) {
+//     .container {
+//         width: 700px;
+//         margin: 0 auto;
+//     }
+//     .carousel {
+//         display: none;
+//     }
+//     nav {
+//         .header__nav-ul {
+//             ul {
+//                 list-style: none;
+//                 display: flex;
+//                 padding: 20px;
+//                 align-items: center;
+//                 li {
+//                     padding: 10px;
+//                 }
+//             }
+//             a {
+//                 text-decoration: none;
+//                 color: #3a1e1c;
+//                 font-family: "Roboto";
+//                 font-weight: 400;
+//                 font-size: 14px;
+//             }
+//         }
+//     }
+// }
+// @media (max-width: 768px) and(min-width:600px) {
+//     .container {
+//         width: 550px;
+//         margin: 0 auto;
+//     }
+//     .carousel {
+//         display: none;
+//     }
+//     .header__nav {
+//         display: flex;
+//         align-items: center;
+//     }
+//     .header__shell {
+//         display: block;
+//         height: 100%;
+//     }
+//     .header__logo {
+//         display: flex;
+//         justify-content: center;
+//     }
+//     .burger-active {
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: space-between;
+//         padding: 30px 40px;
+//         margin-right: 30px;
+//         .burger-item {
+//             width: 40px;
+//             height: 5px;
+//             border: 1px solid #a36361;
+//             border-radius: 20px;
+//             margin: 3px 0;
+//             background: #a36361;
+//         }
+//     }
+//     .burger {
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: space-between;
+//         padding: 30px;
+//         margin-right: 30px;
+//         .burger-item {
+//             width: 40px;
+//             height: 5px;
+//             border: 1px solid #a36361;
+//             border-radius: 20px;
+//             margin: 3px 0;
+//             background: #a36361;
+//         }
+//     }
+//     nav {
+//         .header__nav-ul {
+//             ul {
+//                 display: flex;
+//                 align-items: center;
+//                 list-style: none;
+//                 padding: 0 20px;
+//                 li {
+//                     padding: 0 10px;
+//                 }
+//             }
+//             a {
+//                 text-decoration: none;
+//                 color: #3a1e1c;
+//                 font-family: "Roboto";
+//                 font-weight: 400;
+//                 font-size: 14px;
+//             }
+//         }
+//     }
+// }
